--- a/index.html
+++ b/index.html
@@ -19,5 +19,58 @@
         <a href="eletronicos.html">Eletrônicos</a>
       </div>
     </div>
+    
+    <div id="area-principal">
+      <div id="area-postagens">
+          <!--Abertura postagem -->
+        <div class="postagem">
+          <h2>Titulo da postagem 1</h2>
+          <span class="datapostagem">postado em 20 mar 22</span>
+          <img width="620px" src="./assets/imagem1.jpg" alt="">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto asperiores cupiditate commodi quia odit temporibus voluptatibus sint aliquam culpa iusto labore provident, quo perspiciatis quos repellat sunt corrupti consectetur. Assumenda!
+          </p>
+          <a href="">Leia mais</a>
+        </div>
+        <div class="postagem">
+          <h2>Titulo da postagem 1</h2>
+          <span class="datapostagem">postado em 20 mar 22</span>
+          <img width="620px" src="./assets/imagem2.jpg" alt="">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto asperiores cupiditate commodi quia odit temporibus voluptatibus sint aliquam culpa iusto labore provident, quo perspiciatis quos repellat sunt corrupti consectetur. Assumenda!
+          </p>
+          <a href="">Leia mais</a>
+        </div>
+        <!--Fechamento postagem-->
+      </div>
+      <div id="area-lateral">
+        <!--Inicio area lateral-->
+        <div class="conteudo-lateral">
+          <h3>Postagens Recentes</h3>
+          <div class="postagem-lateral">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa in minima ducimus perspiciatis doloribus excepturi! Eum labore ullam voluptas ut illo similique nesciunt, ex explicabo et sit quaerat porro quisquam.
+            </p>
+            <a href="">Leia mais</a>
+          </div>
+          <div class="postagem-lateral" style="border-bottom: none;">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa in minima ducimus perspiciatis doloribus excepturi! Eum labore ullam voluptas ut illo similique nesciunt, ex explicabo et sit quaerat porro quisquam.
+            </p>
+            <a href="">Leia mais</a>
+          </div>
+          <!--fim area lateral-->
+        </div>
+                  <div class="conteudo-lateral">
+            <h3>Categorias</h3>
+
+        <a href="">Jogos</a><br>
+        <a href="">Celulares</a><br>
+        <a href="">Informática</a><br>
+        <a href="">Eletrônicos</a><br>
+          </div>
+      </div>
+      <div id="rodape">
+        Todos os direitos reservados.
+      </div>
+    </div>
   </body>
 </html>
