--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>TecBlog - o Seu Blog de tecnologias</title>
   </head>
   <body>
@@ -12,11 +12,11 @@
         <h1>Tec<span class="branco">Blog</span></h1>
       </div>
       <div id="area-menu">
-        <a href="index.html">Home</a>
-        <a href="jogos.html">Jogos</a>
-        <a href="celulares.html">Celulares</a>
-        <a href="informatica.html">Informática</a>
-        <a href="eletronicos.html">Eletrônicos</a>
+        <a href="">Home</a>
+        <a href="">Jogos</a>
+        <a href="">Celulares</a>
+        <a href="">Informática</a>
+        <a href="">Eletrônicos</a>
       </div>
     </div>
     
